gcc-14.2.0/libgo/misc/cgo/errors/testdata/issue18452.go
version https://git-lfs.github.com/spec/v1
oid sha256:ad3b38bd1cae2667c2b4dd8d28b86ce623a0cb380be465802f5281826f2d3c08
size 390
